# blackjack-api

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  fly.toml  pyproject.toml
app/: main.py  routes.py
app/helpers/: ws.py
app/modules/: cards.py  game.py  player.py
app/pydantic_types/: __init__.py
app/routes/: __init__.py  http.py  ws.py
